freest/test/prog/valid/functional/Average/Average.fst
module Average where 

avg : Int
avg = div (1 + 2 + 3 + 4 + 5) 5

main : Int
main = avg
