freest/test/prog/Invalid/Typing/TypeMismatchChoice/TypeMismatchChoice.fst
module TypeMismatchChoice where

f : Int -> Int
f (&A c) = 1
